--- a/static/less/builder.less
+++ b/static/less/builder.less
@@ -778,6 +778,7 @@ button.preview {
 .edit-call-to-action {
   .wysihtml5-sandbox {
     .vertical-space-important;
+    width: 90% !important;
   }
 }
 
